Several fixes: - Adjusted doodle text extension iframe height - Enabled autoplay for vimeo videos - Upgraded to jQuery 1.4.1 - Show error message when user wants to upload zero byte file in the flash upload - Moved file progress info to the beginning of the file entry - Tried to fix the wrong encoded file names caused by html5 upload (ali, please check my ruby) - Not possible anymore to start multiple upload processes (which caused a display fuckup) - Decreased margin between meeps, to increase amount of visible meeps in the viewport

--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -80,7 +80,7 @@ body {
   position: relative;
 }
 
-button, p, textarea, input, select, option, h1, h2, h3, h4, legend, label, ul, li, a, a:link, a:visited, a:hover, a:active, a:focus, code, dt, dd {
+div, button, p, textarea, input, select, option, h1, h2, h3, h4, legend, label, ul, li, a, a:link, a:visited, a:hover, a:active, a:focus, code, dt, dd {
   color: rgb(0, 0, 0);
   font: normal normal normal 1em "lucida sans", tahoma, verdana, sans-serif;
 }
@@ -550,6 +550,11 @@ h2 {
   background-color: #F47474;
   cursor: default !important;
 }
+
+#file-list li.disabled span {
+  margin-right: 5px;
+}
+
 #file-list li.directory {
   background: rgb(241, 241, 241) url(/images/icn_directory.png) scroll no-repeat left top;
 }
@@ -690,7 +695,7 @@ h2 {
   margin: 0 0 2em 1em;
 }
 .user-messages > li {
-  margin: 0 0 1.5em 90px;
+  margin: 0 0 0.7em 90px;
   position: relative;
   width: 507px;
 }
@@ -707,7 +712,7 @@ h2 {
   border: 1px solid rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   min-height: 4em;
-  padding: 0.3em 1.8em;
+  padding: 0.15em 1.8em;
 }
 
 .user-messages .message-text p {
@@ -729,10 +734,10 @@ h2 {
 }
 .user-messages .message-info {
   display: block;
-  padding: 0 0 0.3em
+  padding: 0 0 0.2em
 }
 .user-messages .message-author {
-  font-size: 0.7em;
+  font-size: 0.8em;
   font-weight: bold;
 }
 .user-messages .message-date {
